# bish

./: Bish-Format-Spec.md  Cargo.toml  Claude.md  README.md  setup_local.sh
.github/workflows/: rust-lib-build.yml
bish-duckdb/: Cargo.toml  build.rs
bish-duckdb/src/: lib.rs  shim.cpp  table_fn.rs  types.rs
bish-rs/: Cargo.toml
bish-rs/src/: compress.rs  encoding.rs  error.rs  footer.rs  header.rs  lib.rs  reader.rs  types.rs  writer.rs
bish-rs/tests/: round_trip.rs  test_compress.rs  test_encoding.rs  test_footer.rs  test_header.rs  test_types.rs  test_writer.rs
docs/: Claude.md  duckdb-extension-install.md  duckdb-extension-plan.md  offline-duckdb-install.md
installation/: README.md  append_metadata.py  setup.sh  validate.sh
scripts/: duckdb-expense-smoke.sh  duckdb-smoke.sh  duckdb-smoke.sql
