[package]
name = "bish-duckdb"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "bish_duckdb"
crate-type = ["cdylib", "rlib"]

[features]
default = []
duckdb-link = ["dep:libduckdb-sys"]

[dependencies]
bish = { path = "../bish-rs" }
libduckdb-sys = { version = "1", optional = true }
thiserror = "1.0"

[build-dependencies]
cc = "1"

[dev-dependencies]
pretty_assertions = "1"
